[package]
name = "md-pdf"
version = "0.1.0"
authors = ["Jake Howard <git@theorangeone.net>"]
build = "build.rs"

[dependencies]
clap = "2.25.0"
mktemp = "0.3.1"
pandoc = "0.6.2"
sciter-rs = "0.4.21"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_yaml = "0.7.1"
wkhtmltopdf = "0.3.0"
zip = "0.2.6"

[build-dependencies]
include_dir = "0.1.3"

[profile.dev]
rpath = true

[profile.release]
rpath = true
lto = true
